--- a/backend/.env
+++ b/backend/.env
@@ -39,7 +39,7 @@ MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USERNAME=olusesia@gmail.com
-MAIL_PASSWORD="##12Abc..?"
+MAIL_PASSWORD=394XyQ.%
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=olusesia@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
