Build frontend, backend and env files

--- a/backend/.env
+++ b/backend/.env
@@ -59,8 +59,8 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-# SESSION_DOMAIN=http://localhost:8000/
-# SANCTUM_STATEFUL_DOMAINS=http://localhost:8000/
+# SESSION_DOMAIN=http://localhost:8000
+# SANCTUM_STATEFUL_DOMAINS=http://localhost:8000
 
-SESSION_DOMAIN=http://victruth.com/
-SANCTUM_STATEFUL_DOMAINS=http://victruth.com/
+SESSION_DOMAIN=http://test.victruth.com/backend
+SANCTUM_STATEFUL_DOMAINS=http://test.victruth.com/backend
