Add s to the https for api

--- a/backend/.env
+++ b/backend/.env
@@ -62,5 +62,5 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 # SESSION_DOMAIN=http://localhost:8000
 # SANCTUM_STATEFUL_DOMAINS=http://localhost:8000
 
-SESSION_DOMAIN=http://test.victruth.com/backend
-SANCTUM_STATEFUL_DOMAINS=http://test.victruth.com/backend
+SESSION_DOMAIN=https://test.victruth.com/backend
+SANCTUM_STATEFUL_DOMAINS=https://test.victruth.com/backend
