--- a/backend/.env
+++ b/backend/.env
@@ -60,7 +60,7 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 # SESSION_DOMAIN=http://localhost:8000
-# SANCTUM_STATEFUL_DOMAINS=http://localhost:8000
+ #SANCTUM_STATEFUL_DOMAINS=http://localhost:8000
 
-SESSION_DOMAIN=https://test.victruth.com/backend
-SANCTUM_STATEFUL_DOMAINS=https://test.victruth.com/backend
+SESSION_DOMAIN=https://test.victruth.com
+SANCTUM_STATEFUL_DOMAINS=https://test.victruth.com
